# jobsearch-startup

./: README.md  pyproject.toml
app/: main.py  model.py
app/auth/: auth.py
app/service/: user_service.py
