[tool.poetry]
name = "user-login"
version = "0.1.0"
description = ""
authors = ["xulong xiao <justinxiaoxulong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = "^2.10.4"
prisma = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
